--- a/pbs/styles.css
+++ b/pbs/styles.css
@@ -1,76 +1,86 @@
-header{
-    font-size: 33px;
-
-
+body{
+    font-family: "Source Sans Pro";
+    background-color: #FAFAFA;
 }
 
 nav{
-    color: #FAFAFA;
-    /* background-color: #37474f; */
-    font-size: 20px;
+    font-family: "Oxygen";
 }
 
-nav ul {
+.menulvl0
+{
     list-style: none;
-    background-color: #444444;
-    text-align: center;
     padding: 0;
     margin: 0;
 }
 
-nav li{
-    font-family: "Oxygen", sans-serif;
-    font-size: 1.2em;
-    line-height: 39px;
-    border-bottom: 1px solid #888; 
-    /* to po wyżej wrzucić w nav li li  */
+.menulvl0 > li
+{
+    position: relative;
+    float: left;
+    height: 30px;
+    width: 150px;
+    background: #999999;
+}
+.menulvl0 > li:hover { background: #CCCCCC; }
+
+.menulvl0 li:hover > ul
+{
+    /* On hover, display the next level's menu */
+    display: inline;
 }
 
-nav li ul{
-    position: absolute;
-    display: none;
-}
 
-nav li{
-    font-family: "Oxygen", sans-serif;
-    font-size: 1em;
-    line-height: 39px;
-    border-bottom: 1px solid #888;} 
+/* Menu Link Styles */
 
-nav ul ul{
-    position: absolute;
-    display: none;
-}
-
-nav li li{
-    font-size: 0.8em;
-}
-
-nav a{
+.menulvl0 a /* Apply to all links inside the multi-level menu */
+{
+    font: bold 14px Arial, Helvetica, sans-serif;
+    color: #FFFFFF;
     text-decoration: none;
-    color: #FAFAFA;
-    display: block;    
-    transition: .3s background-color;
+    padding: 0 0 0 10px;
+
+    /* Make the link cover the entire list item-container */
+    display: block;
+    line-height: 30px;
+}
+.menulvl0 a:hover { color: #000000; }
+
+.menulvl1
+{
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 150px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
 }
 
-nav a:hover{
-    background-color: #005f5f;
+.menulvl1 > li
+{
+    position: relative;
+    height: 30px;
+    background: #999999;
+}
+.menulvl1 > li:hover { background: #CCCCCC; }
+
+.menulvl2
+{
+    position: absolute;
+    top: 0;
+    right: -150px;
+    width: 150px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
 }
 
-nav a:active{
-    background-color: #aaa;
-    color: #444;
-    cursor: default;
+.menulvl2 > li
+{
+    height: 30px;
+    background: #999999;
 }
-
-@media screen and (min-width: 1000px){
-    nav li{
-        width: 225px;
-        border-bottom: none;
-        height: 50px;
-        line-height: 50px;
-        font-size: 1.4em;
-        display: inline-block;
-        margin-right: -4px;
-    }
-}
+.menulvl2 > li:hover { background: #CCCCCC; }
