--- a/pbs/styles.css
+++ b/pbs/styles.css
@@ -1,86 +1,133 @@
 body{
     font-family: "Source Sans Pro";
-    background-color: #FAFAFA;
-}
-
-nav{
-    font-family: "Oxygen";
-}
-
-.menulvl0
-{
-    list-style: none;
-    padding: 0;
+    background: #FAFAFA;
+    font-size: 1em;
     margin: 0;
 }
-
-.menulvl0 > li
-{
-    position: relative;
-    float: left;
-    height: 30px;
-    width: 150px;
-    background: #999999;
+    
+nav{
+    font-family: "Oxygen"; 
+    width: 100%;
+    background-color: #01579B;
+    text-align: center;
+    z-index: 98;
+    position: sticky;
+    height: 50px;
+    left: 0;
+    top: 0;
 }
-.menulvl0 > li:hover { background: #CCCCCC; }
 
-.menulvl0 li:hover > ul
-{
-    /* On hover, display the next level's menu */
+section{
+    padding-top: 10px;
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+}
+
+footer{
+    text-align: center;
+    padding: 30px;
+    background: #01578A;
+    color: #fafafa;
+
+}
+
+ol{
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    font-size: 1.25em;
+    line-height: 200%;
+    display: inline-block;
+}
+
+ol a{
+    color: #fafafa;
+    text-decoration: none;
+    display: block;
+}
+
+ol > li{
+    float: left;
+    width: 200px;
+    height: 40px;
+    padding: 5px 0;
+    position: relative;
+}
+
+ol > li:hover{
+    background: #0091EA;
+}
+
+
+ol > li:hover > a{
+    color: #CFD8DC;
+}
+
+ol > li > ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    height: 35px;
+    font-size: 1em;
+    display: none;
+    position: absolute;
+    width: 200px;
+    top: 50;
+
+}
+
+ol > li:hover > ul{
+    display: block;
+}
+
+ol > li > ul > li{
+    background: #01579A;
+    position: relative;
+    z-index: 99;
+}
+
+ol > li > ul > li:hover{
+    background: #0091EA;
+}
+
+ol > li > ul > li:hover > a{
+    color: #CFD8DC;
+}
+
+ol > li > ul > li > ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    font-size: 0.8em;
+    display: none;
+    position: absolute;
+    right: -200px;
+    width: 200px;
+    top: 0;
+}
+
+ol > li > ul > li:hover > ul{
     display: inline;
 }
 
-
-/* Menu Link Styles */
-
-.menulvl0 a /* Apply to all links inside the multi-level menu */
-{
-    font: bold 14px Arial, Helvetica, sans-serif;
-    color: #FFFFFF;
-    text-decoration: none;
-    padding: 0 0 0 10px;
-
-    /* Make the link cover the entire list item-container */
-    display: block;
-    line-height: 30px;
-}
-.menulvl0 a:hover { color: #000000; }
-
-.menulvl1
-{
-    position: absolute;
-    top: 30px;
-    left: 0;
-    width: 150px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: none;
+ol > li > ul > li > ul > li{
+    background: #01579A;
+    z-index: 100;
+    height: 35px;
+    padding-bottom: 5px;
 }
 
-.menulvl1 > li
-{
-    position: relative;
-    height: 30px;
-    background: #999999;
-}
-.menulvl1 > li:hover { background: #CCCCCC; }
-
-.menulvl2
-{
-    position: absolute;
-    top: 0;
-    right: -150px;
-    width: 150px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: none;
+ol > li > ul > li > ul > li:hover{
+    background: #0091EA;
 }
 
-.menulvl2 > li
-{
-    height: 30px;
-    background: #999999;
+ol > li > ul > li > ul > li:hover > a{
+    color: #CFD8DC;
 }
-.menulvl2 > li:hover { background: #CCCCCC; }
+
+.edb{
+    padding: 5px 0 10px 0;
+    line-height: normal;
+}
