--- a/pbs/styles/style.css
+++ b/pbs/styles/style.css
@@ -16,7 +16,7 @@ body{
 
 section{
     padding-top: 10px;
-    width: 1000px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     text-align: justify;
@@ -27,6 +27,15 @@ section{
 h1{
     color: #424242;
     font-size: 2em;
+    font-weight: 700;
+    margin: 15px 0;
+}
+
+h2{
+    color: #424242;
+    font-size: 1.80em;
+    font-weight: 600;
+    margin: 10px 0;
 }
 
 footer{
@@ -41,6 +50,34 @@ a{
     color: #212121;
 }
 
+p{
+    margin: 0;
+    padding: 10px 0;
+}
+
+#italic{
+    font-style: italic;
+    font-size: 0.75em;
+    text-align: right;
+}
+
+blockquote {
+    border-left: 10px solid #0091EA;
+    margin: 0.5em 0;
+    padding: 0.5em 10px;
+    quotes: "\201C""\201D""\2018""\2019";
+  }
+blockquote:before {
+    color: #01579B;
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em;
+  }
+blockquote p {
+    display: inline;
+  }
 
 
 /* Wyłączone menu */
