--- a/spartez/styles/style.css
+++ b/spartez/styles/style.css
@@ -21,6 +21,19 @@ section{
     text-align: justify;
     background: #fff;
     padding: 12px;
+    display: flow-root;
+}
+#mapa{
+    float: right;
+    padding: 10px;
+}
+#formularz{
+    float: left;
+    padding: 10px;
+    max-width: 480px;
+}
+span{
+    padding: 0 5px;
 }
 
 embed{
@@ -52,6 +65,7 @@ footer{
     padding: 1.57em 0.32em;
     background: #01579B;
     color: #fafafa;
+    display: block;
 }
 footer > a{
     color: #fafafa;
