--- a/pbs/styles/style.css
+++ b/pbs/styles/style.css
@@ -15,7 +15,7 @@ body{
 
 section{
     padding-top: 10px;
-    max-width: 1000px;
+    max-width: 976px;
     margin-left: auto;
     margin-right: auto;
     text-align: justify;
@@ -36,7 +36,7 @@ h1{
 
 h2{
     color: #424242;
-    font-size: 1.80em;
+    font-size: 1.75em;
     font-weight: 600;
     margin: 10px 0;
 }
@@ -45,6 +45,27 @@ h3{
     color: #313131;
     font-size: 1.5em;
     margin: 7.5px 0 5px 5px;
+}
+
+h4{
+    color: #313131;
+    font-size: 1.25em;
+    font-weight: 500;
+    margin: 5px 0 5px 1em;
+    transition: all .5s;
+    display: inline-block;
+}
+
+h4::before{
+    content: "⇒";
+    color:#0091EA;
+    margin-right: 10px;
+}
+
+h4:hover{
+    color: #0091EA;
+    transition-duration: 0.5s;
+    transition-timing-function:linear;
 }
 
 footer{
@@ -210,7 +231,6 @@ ol > li:nth-child(4),
 .active{
     background-color: #03A9F4;
 }
-
 nav{
     font-family: "Oxygen"; 
     width: 100%;
@@ -222,7 +242,6 @@ nav{
     left: 0;
     top: 0;
 }
-
 ol{
     padding: 0;
     margin: 0;
@@ -231,33 +250,29 @@ ol{
     line-height: 200%;
     display: inline-block;
 }
-
 ol a{
     color: #fafafa;
     text-decoration: none;
     display: block;
 }
-
 ol > li{
     float: left;
     width: 200px;
     height: 40px;
     padding: 5px 0;
     position: relative;
+    transition: all .5s;
 }
-
 ol > li:hover{
     background: #0091EA;
     transition-duration: 0.5s;
     transition-timing-function:linear;
 }
-
 ol > li:hover > a{
     color: #CFD8DC;
     transition-duration: 0.5s;
     transition-timing-function:linear;    
 }
-
 ol > li > ul{
     list-style-type: none;
     padding: 0;
@@ -270,30 +285,26 @@ ol > li > ul{
     top: 50;
 
 }
-
 ol > li:hover > ul{
     display: block;
     animation: opacipy 0.25s linear;
 }
-
 ol > li > ul > li{
     background: #01579A;
     position: relative;
     z-index: 99;
+    transition: all .5s;
 }
-
 ol > li > ul > li:hover{
     background: #0091EA;
     transition-duration: 0.5s;
     transition-timing-function:linear; 
 }
-
 ol > li > ul > li:hover > a{
     color: #CFD8DC;
     transition-duration: 0.5s;
     transition-timing-function:linear; 
 }
-
 ol > li > ul > li > ul{
     list-style-type: none;
     padding: 0;
@@ -305,25 +316,22 @@ ol > li > ul > li > ul{
     width: 200px;
     top: 0;
 }
-
 ol > li > ul > li:hover > ul{
     display: inline;
     animation: opacipy 0.25s linear;
 }
-
 ol > li > ul > li > ul > li{
     background: #01579A;
     z-index: 100;
     height: 35px;
     padding-bottom: 5px;
+    transition: all .5s;
 }
-
 ol > li > ul > li > ul > li:hover{
     background: #0091EA;
     transition-duration: 0.5s;
     transition-timing-function:linear; 
 }
-
 ol > li > ul > li > ul > li:hover > a{
     color: #CFD8DC;
     transition-duration: 0.5s;
@@ -334,36 +342,22 @@ ol > li > ul > li > ul > li:hover > a{
     padding: 5px 0 10px 0;
     line-height: normal;
 }
-
 @keyframes opacipy {
     0% {opacity: 0;}
     100% {opacity: 1;}
 }
-
 .up1{
-    top: -40px;
-}
-
+    top: -40px;}
 .up2{
-    top: -80px;
-}
-
+    top: -80px;}
 .up5{
-    top: -120px;
-}
-
+    top: -120px;}
 .up3{
-    top: -160px;
-}
-
+    top: -160px;}
 .up6{
-    top: -200px;
-}
-
+    top: -200px;}
 .up4{
-    top: -250px;
-}
-
+    top: -250px;}
 
 /* menu wyboru książek */
 
@@ -372,7 +366,8 @@ ol > li > ul > li > ul > li:hover > a{
     border-radius: 10px;
     position: relative;
     z-index: 1;
-    margin: 25px;
+    margin: 25px auto;
+    display: table;
 }
 
 #nag{
@@ -400,13 +395,16 @@ ol > li > ul > li > ul > li:hover > a{
     filter: grayscale(66%)
 }
 
+.ksiazka>.podpis{
+    transition: all .5s;
+}
+
 .podpis{
-    width: 175px;
+    width: 250px;
     margin-top: 1px;
     padding: 10px;
     border-radius: 5px;
     background: #fff;
-
 }
 
 .ksiazka:hover img{
@@ -416,9 +414,16 @@ ol > li > ul > li > ul > li:hover > a{
 }
 
 .ksiazka:hover>.podpis{
-    background: #8bc34a;
     color: #fff;
     transition-duration: 0.5s;
     transition-timing-function:linear; 
 }
 
+.disable{
+    filter: grayscale(100%);
+    pointer-events: none;
+}
+
+.ksiazka:hover>.historia{
+    background: #6D4C41;
+}
