--- a/pbs/styles/style.css
+++ b/pbs/styles/style.css
@@ -13,6 +13,9 @@ body{
     color: #212121;
     font-weight: 300;
 }
+#bodymainpage{
+    background: #fff;
+}
 
 section{
     padding-top: 10px;
@@ -66,7 +69,7 @@ h4::before{
 
 h4:hover{
     color: #0091EA;
-    transition-duration: 0.5s;
+    transition-duration: .5s;
     transition-timing-function:linear;
 }
 
@@ -86,6 +89,8 @@ a{
 p{
     margin: 0;
     padding: 10px 0;
+    font-weight: 400;
+    font-size: 1.12em;
 }
 
 #italic{
@@ -155,7 +160,34 @@ blockquote::after{
     transition-timing-function:linear; 
 }
 
+.mainpage{
+    margin: 0 20px;
+    list-style-type: none;
+    padding: 0.17em;
+}
+.mainpage > li::before{
+    color:#0091EA;
+    content: "☑";
+    margin-right: 10px;
+}
+.mainpage > li{
+    color: #313131;
+    font-size: 1.25em;
+    margin: 7.5px 0 5px 5px;
+    font-weight: 400;
+}
 
+.blue1{
+    color: #01579B;
+}
+.blue2{
+    color:#01579B;
+    font-size: 1.5em;
+}
+.imgmain{
+    margin: 0;
+    max-width: 100%;
+}
 
 /* Wyłączone menu */
 ol > li:nth-child(2) > ul > li:nth-child(1) > ul > li:nth-child(1), 
