--- a/pbs/styles/style.css
+++ b/pbs/styles/style.css
@@ -75,7 +75,7 @@ h4:hover{
 
 footer{
     text-align: center;
-    padding: 1.57em 0.32em;
+    padding: 1em;
     background: #01579B;
     color: #fafafa;
 }
@@ -89,11 +89,12 @@ a{
 p{
     margin: 0;
     padding: 10px 0;
-    font-weight: 400;
     font-size: 1.12em;
 }
-
-#italic{
+.weight400{
+    font-weight: 400;
+}
+#italicquote{
     font-style: italic;
     font-size: 0.75em;
     text-align: right;
@@ -120,19 +121,20 @@ blockquote::after{
     display: none;
 }
 
-.listap1, .listap2, .listap3{
+.listp{
     list-style-type: none;
     margin: 0.67em 0;
     padding: 0.17em;
     font-size: 1em;
+    font-weight: 400;
     display: inline-block;
 }
-.listap1 > li::before, .listap2 > li::before, .listap3 > li::before{
+.listp > li::before{
     color:#0091EA;
     content: "❑";
     margin-right: 10px;
 }
-.listap1 > li, .listap2 > li, .listap3 > li{
+.listp > li{
     float: left;
     margin-right: 1.7em;
 }
@@ -186,7 +188,8 @@ blockquote::after{
 }
 .imgmain{
     margin: 0;
-    max-width: 100%;
+    max-width: 1920px;
+    width:100%;
 }
 
 /* Wyłączone menu */
