--- a/ch/style.css
+++ b/ch/style.css
@@ -14,19 +14,28 @@ body{
     background-position: center;
     background-size: cover;
     text-shadow: black 0px 0px 2px;
-    filter: grayscale(75%);
+    filter: grayscale(83%);
+    opacity: 0.8;
 }
 
 #startleft:hover, #startright:hover{
     filter: grayscale(0%);
-    filter: blur(1px);
+    transition-duration: 0.71s;
+    transition-timing-function: linear; 
+    opacity: 1;
 }
+
 
 #startright{
     float: left;
     width: 50%;
     height: 100%;
-    background-color: darkslategray;
+    background-image: url("2.jpg");
+    background-position: center;
+    background-size: cover;
+    text-shadow: black 0px 0px 2px;
+    filter: grayscale(75%);
+    opacity: 0.8;
 }
 
 #startleft::before, #startright::before{
